[gd_scene load_steps=3 format=3 uid="uid://dsour306fijnq"]

[ext_resource type="Script" path="res://src/ui/pause_menu.gd" id="1_n87rw"]
[ext_resource type="Theme" uid="uid://dyjxrr15wdax8" path="res://graphics/ui_theme.tres" id="2_myx47"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n87rw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_myx47")

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="ToggleFullScreen" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle fullscreen"

[node name="QuitToMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to menu"

[node name="QuitToDesktop" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to desktop"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/ToggleFullScreen" to="." method="_on_toggle_full_screen_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToDesktop" to="." method="_on_quit_to_desktop_pressed"]
